# dillshare

./: .env  Cargo.toml  Dockerfile  compose.yaml
src/: index.html  main.rs  storage.rs  sw.js
