[package]
name = "dillshare"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "limit", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.18"
uuid = { version = "1.7", features = ["v4", "v5"] }
mime_guess = "2.0"
chrono = { version = "0.4", features = ["serde"] }
tokio-util = { version = "0.7", features = ["io"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
percent-encoding = "2.3"
sha2 = "0.10.8"
hmac = "0.12.1"
totp-rs = { version = "5.5", features = ["qr", "gen_secret"] }
rand = "0.10.2"
base64 = "0.22.1"
webauthn-rs = { version = "0.5.5", features = ["danger-allow-state-serialisation", "conditional-ui"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
